deploy/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: halkyon-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: halkyon-nginx
    spec:
      containers:
        - image: bitnami/nginx
          imagePullPolicy: Always
          name: halkyon-nginx
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: halkyon-nginx-configs
              mountPath: /etc/nginx/conf.d
      # Load the configuration files for nginx
      volumes:
        - name: halkyon-nginx-configs
          configMap:
            name: halkyon-nginx-config
