deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: halkyon-nginx
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: halkyon-nginx
