deploy/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: halkyon-nginx
spec:
  host: halkyon.io
  tls:
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFSzCCBDOgAwIBAgISA9LwhWi/JPxlSVSXZYi4tHYFMA0GCSqGSIb3DQEBCwUA
[...]
      of2RdOGXPMs+5N5J6IeW
      -----END CERTIFICATE-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEkjCCA3qgAwIBAgIQCgFBQgAAAVOFc2oLheynCDANBgkqhkiG9w0BAQsFADA/
[...]
      KOqkqm57TH2H3eDJAkSnh6/DNFu0Qg==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAzdOJR30+V9ZhVcRL6+2N59SeEZtMacLhFqjwdwnfQvveCPCw
[...]
      IYKxdNQqoODv5HCGc+AlvOGzYUyvJLThI5XHseVKQ0mRPTdyxHdZ
      -----END RSA PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: halkyon-nginx
    weight: 100
  wildcardPolicy: None
